--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
     <h2>Baca pesan di bawah ini yaaa</h2>
     <div class="slide-container">
       <div class="slide">Happy birthday, sayangg!, duh aku bingung mau ngomong apa yaaa,coba klik selanjutnya aja deh di bawah ini yaa</div>
-      <div class="slide">Selamat ulang tahun yang ke22 yaa sayangkuu,seneng banget rasanya aku bisa ada dalam momen spesial kamu hihihi,aku ga tau ini ulang tahun paling berkesan atau enggak dalam hidup kamu tapi intinya aku seneng setiap momen tuh sama kamu hehehe,ehh iya maap kalo web ya aga butut yaa soalnya bukan anak IT wkwk😭</div>
-      <div class="slide">Semoga di ultah kamu yang ke 22 ini kamu bisa menjadi versi terbaik diri kamu dalam hal apapun yaa sayangg,selain itu aku juga bakal ada selalu di belakang kamu buat jadi support dalam hal apapun yang ingin kamu gapai di umur sekarang dan kedepanya I'll always be yours biggest supporter, I love you more cintakuu❤️😽🎉!</div>
+      <div class="slide">Intinya aku seneng banget rasanya aku bisa ada dalam momen spesial kamu hihihi,aku ga tau ini ulang tahun paling berkesan atau enggak dalam hidup kamu tapi intinya aku seneng setiap momen tuh sama kamu hehehe,ehh iya maap kalo web ya aga butut ya soalnya bukan anak IT wkwk😭</div>
+      <div class="slide">Semoga di ultah kamu yang ke 22 ini kamu bisa menjadi versi terbaik diri kamu dalam hal apapun ya sayang,selain itu aku juga bakal ada selalu di belakang kamu buat jadi support dalam hal apapun yang ingin kamu gapai di umur sekarang dan kedepanya I'll always be yours biggest supporter, I love you more cintakuu❤️🎉!</div>
     </div>
     <button id="prev" onclick="prevSlide()">Sebelumnya</button>
     <button id="next" onclick="nextSlide()">Selanjutnya</button>
